--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -5,59 +5,59 @@
 	        	<%#=unless @school.blank?%>
 	  			<!-- <span class="top-school-heading"><%#= @school.name + " (" + @school.code + ")" %></span> -->
 				<%#=end%>
-	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
+	          <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
-				<%= form_for(@classroom, :html=>{:class=>"form_validation classroom_form"} ) do |f| %>
-				    <%=f.hidden_field :school_id, :value=>@school.id%>
-					<div id="errorbox">	
-					    <%= render "shared/error_messages", :object=>@classroom %>
-					</div>
-	                <div class="row">
-						<% if action_name.eql?("edit") || action_name.eql?("update")%> 
-	                    <div class="col-sm-3">
-	                        <div class="form-group">
-	                    	    <%= f.label :code, "Class Code", :class=>"control-label" %> </br>
-	                    	    <%= @classroom.code %>
-	                        </div>
-	                    </div>
-						<%end%>
-	                    <div class="col-sm-6">
-	                        <div class="form-group">
+				    <%= form_for(@classroom, :html=>{:class=>"form_validation classroom_form"} ) do |f| %>
+				      <%=f.hidden_field :school_id, :value=>@school.id%>
+					    <div id="errorbox">	
+					      <%= render "shared/error_messages", :object=>@classroom %>
+					    </div>
+	            <div class="row">
+						    <% if action_name.eql?("edit") || action_name.eql?("update")%> 
+	                <div class="col-sm-3">
+	                  <div class="form-group">
+	               	    <%= f.label :code, "Class Code", :class=>"control-label" %> </br>
+	               	    <%= @classroom.code %>
+	                  </div>
+	                </div>
+						    <%end%>
+	                <div class="col-sm-6">
+	                  <div class="form-group">
 			     		        <%= f.label :name, "Class Name", :class=>"control-label" %><span class="asterisk">*</span>
 			     		        <%= f.text_field :name, :autofocus => true, :required=>true, :class=>"form-control" %>
-	                        </div>
-	                    </div>
-	               </div>
-	               <% if action_name.eql?("edit")%> 
-				   <div class="row">
-						<!-- <div class="col-sm-3">
+	                  </div>
+	                </div>
+	            </div>
+	            <%#= if action_name.eql?("edit")%> 
+				        <div class="row">
+						      <!-- <div class="col-sm-3">
 	                        <div class="form-group">
 	                    	    <%#= label_tag "teachers_count", "Number Of School Admins", :class=>"control-label" %> : 
 								            <%#= @classroom.users.un_archived.school_admins.count %>
 	                        </div>
 	                    </div> -->
-						<div class="col-sm-3">
-	                        <div class="form-group">
-	                    	    <%= label_tag "teachers_count", "Number Of Teachers", :class=>"control-label" %> : 
-								            <%= hidden_field_tag "teachers_count",  @classroom.users.un_archived.teachers.count + @classroom.users.un_archived.school_admins.count%>
-                            <div id="old_teachers_count">
-                              <%= @classroom.users.un_archived.teachers.count + @classroom.users.un_archived.school_admins.count %>
-                            </div>
-                          </div>
-	                    </div>
-						<div class="col-sm-6">
-	                        <div class="form-group">
-			     		            <%= label_tag "students_count", "Number Of Students", :class=>"control-label" %> :
-                          <%= hidden_field_tag "students_count", @classroom.users.un_archived.students.count %>
-                          <div id="old_students_count">
-								            <%= @classroom.users.un_archived.students.count %>
-                          </div>
-	                        </div>
-	                    </div>
-	               </div>
-				   <%end%>
-	               <!-- <div class="row">
+						      <div class="col-sm-3">
+	                  <div class="form-group">
+	                    <%= label_tag "teachers_count", "Number Of Teachers", :class=>"control-label" %> : 
+								      <%= hidden_field_tag "teachers_count",  @classroom.users.un_archived.teachers.count + @classroom.users.un_archived.school_admins.count%>
+                      <div id="old_teachers_count">
+                        <%= @classroom.users.un_archived.teachers.count + @classroom.users.un_archived.school_admins.count %>
+                      </div>
+                    </div>
+	                </div>
+						      <div class="col-sm-6">
+	                  <div class="form-group">
+			     		        <%= label_tag "students_count", "Number Of Students", :class=>"control-label" %> :
+                      <%= hidden_field_tag "students_count", @classroom.users.un_archived.students.count %>
+                      <div id="old_students_count">
+								        <%= @classroom.users.un_archived.students.count %>
+                      </div>
+	                  </div>
+	                </div>
+	              </div>
+				      <%#=end%>
+	            <!-- <div class="row">
 				       <div class="col-sm-3">
 	                       <div class="form-group">
 	                           <%#= f.label :school_year_start_date, "School Start Year", :class=>"control-label" %>
@@ -68,7 +68,7 @@
 							   <%#=end%>	   
 	                       </div>
 	                   </div>
-					   <div class="col-sm-3">
+					      <div class="col-sm-3">
 	                       <div class="form-group">
 			     	           <%#= f.label :school_year_end_date, "School End Year", :class=>"control-label" %>
 							   <%#=unless f.object.school_year_end_date.blank? %>
@@ -79,7 +79,7 @@
 							   <div id="id_end_msg" style="display:none" class="error">End date should be greater than start date</div>   	                       </div>
 	                   </div>
 	              </div> -->
-				  <%= hidden_field_tag 'selected_ids', @assigned_teachers.map{|c| c.id }  %>
+				      <%= hidden_field_tag 'selected_ids', @assigned_teachers.map{|c| c.id }  %>
 	  		        <div class="row">
 	                <div class="col-sm-9">
 	                  <div class="form-group">
@@ -101,8 +101,8 @@
 	                  </div>
 	                </div>
 	  		        </div>
-                <br><br><br><br>
-  				  <%= hidden_field_tag 'student_selected_ids', @assigned_students.map{|c| c.id }  %>
+                <br><br><br>
+  				      <%= hidden_field_tag 'student_selected_ids', @assigned_students.map{|c| c.id }  %>
   	  		      <div class="row">
   	                <div class="col-sm-9">
   	                    <div class="form-group">
@@ -712,6 +712,9 @@ $('body').on('click', function(e) {
         enable_disable_add_arrow_stud();
       });  
     }
+   
+    
+
 });
 </script>
 
