resolved few issues related to mulyi select and school icon

--- a/app/views/licenses/_licenses_info.html.erb
+++ b/app/views/licenses/_licenses_info.html.erb
@@ -10,7 +10,7 @@
                 <thead>
                     <tr>
 						<th>Batch Name</th>
-	                    <th>Number Of Liscenses</th>
+	                    <th>Number Of Licenses</th>
 					    <th>Licenses Used</th>
 	                    <th>License Expiration Date</th>
 					    <th>Action</th>
