--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -673,6 +673,54 @@ function enable_disable_add_arrow_stud()
   }
 }
 
+$('.right-listbox').on('click','.lbjs-item',function(){
+  if ($('#already_assigned_id option:selected').length > 0) 
+    {
+        var selectedOpts = $('#already_assigned_id option:selected').clone();
+          selectedOpts.each(function(i){
+          $('.left-listbox .lbjs-item[user_id='+this.value+']').removeAttr("selected");
+          $("#already_assigned_id option[value='"+this.value+"']").removeAttr("selected");
+          }); 
+        } 
+    enable_disable_remove_arrow();
+});
+
+$('.left-listbox').on('click','.lbjs-item',function(){
+  if ($('#all_present_id option:selected').length > 0) 
+    {
+        var selectedOpts = $('#all_present_id option:selected').clone();
+          selectedOpts.each(function(i){
+          $('.right-listbox .lbjs-item[user_id='+this.value+']').removeAttr("selected");
+          $("#all_present_id option[value='"+this.value+"']").removeAttr("selected");
+          }); 
+        } 
+    enable_disable_add_arrow();
+});
+
+$('.right-stud-listbox').on('click','.lbjs-item',function(){
+  if ($('#student_assigned_id option:selected').length > 0) 
+    {
+        var selectedOpts = $('#student_assigned_id option:selected').clone();
+          selectedOpts.each(function(i){
+          $('.left-stud-listbox .lbjs-item[user_id='+this.value+']').removeAttr("selected");
+          $("#student_assigned_id option[value='"+this.value+"']").removeAttr("selected");
+          }); 
+        } 
+    enable_disable_remove_arrow_stud();
+});
+
+$('.left-stud-listbox').on('click','.lbjs-item',function(){
+  if ($('#all_student_id option:selected').length > 0) 
+    {
+        var selectedOpts = $('#all_student_id option:selected').clone();
+          selectedOpts.each(function(i){
+          $('.right-stud-listbox .lbjs-item[user_id='+this.value+']').removeAttr("selected");
+          $("#all_student_id option[value='"+this.value+"']").removeAttr("selected");
+          }); 
+        } 
+    enable_disable_add_arrow_stud();
+});
+
 $('body').on('click', function(e) {
     if (!$(e.target.parentElement).hasClass('lbjs-list')) {
       var selectedOpts = $('#all_present_id option:selected').clone();
