--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -66,6 +66,9 @@
 					   	    <% if can? :destroy, :schools %> 
 						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: "Are you sure you want to archive school: #{school.name} ?" }, confirm_text: "" %> 
 					      	<%end%>
+					      	<% if can? :read, :schools %> 
+						      <%= link_to '<i title="View School" class="glyphicon glyphicon-eye-open"></i>'.html_safe, school_path(school) %> 
+					      	<%end%>
 							<% if can? :create, :licenses %> 
 							   <%= link_to '<i title="Add License" class="btg btg-lisence"></i>'.html_safe, new_license_path(:school_id=>school)%> 
 							<%end%>
