--- a/app/assets/stylesheets/listbox.css
+++ b/app/assets/stylesheets/listbox.css
@@ -8,7 +8,7 @@
 
 .lbjs {
     margin: 0px;
-    width: 170px;
+    width: 200px;
     padding: 5px;
     border: 1px solid #CCC;
     border-radius: 5px;
@@ -39,10 +39,6 @@
     opacity: 0.4;
 }
 
-.lbjs .lbjs-list .lbjs-item:hover:not([disabled]) {
-    background: rgba(112, 147, 216, 0.9);
-}
-
 .lbjs .lbjs-list .lbjs-item[selected] {
     background: rgba(112, 147, 216, 0.5);
 }
@@ -58,9 +54,8 @@
 }
 
 .lbjs .lbjs-searchbar {
-    margin: 0px;
-    margin-bottom: 10px;
-    width: 100%;
-    padding: 3px 5px;
+    margin: 0 auto 10px;
+    padding: 3px 4px;
     border: 1px solid #ccc;
+    width: 187px;
 }
