--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,50 +87,63 @@
 	</li> -->
     
     <%else%>
-    <li class="nav-parent" id="li_options"><a href=""><i class="fa fa-chevron-circle-down"></i> <span>Options</span></a>
+    <li class="nav-parent" id="li_options"><a href=""><i class="fa fa-chevron-circle-down"></i> <span>Options<%#= current_user.school.name %></span></a>
       <span class="arrow arrw-pos" container_li="li_options"></span>
           <ul class="children">
-	  <% if (can? :create, :accessrights) && (can? :update, :accessrights) && (can? :read, :accessrights) %>  
-          <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Assign Access Right", new_accessright_path %></li>
-	  
-	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
-      <%end%>		  
-	  <% if can? :create, :books %>
-	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
-	  <%end%>
-	  <% if can? :read, :books %>
-	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Book List", books_path %></li>
-	  <%end%>  		  
-      <% if (can? :create, :users) && (can? :create_sa, :users) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School Admin", new_user_path(:role_id =>Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if (can? :read, :users) && (can? :read_sa, :users) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Admin Listing", users_path(:role_id => Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if (can? :create, :users) && (can? :create_teacher, :users) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Teacher", new_user_path(:role_id =>Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if (can? :read, :users) && (can? :read_teacher, :users) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher Listing", users_path(:role_id => Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if (((can? :destroy, :users) && (can? :destroy_student, :users)) || ((can? :destroy, :users) && (can? :manage_student, :users))) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Student", new_user_path(:role_id =>Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student Listing", users_path(:role_id => Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
-      <%end%>
-      <% if can? :create, :classrooms %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Classroom", new_classroom_path(:school_id => current_user.school_id) %></li>
-      <%end%>
-      <% if can? :read, :classrooms %>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom Listing", classrooms_path(:school_id => current_user.school_id) %></li>
-      <%end%>
-      <% if can? :create, :licenses%>  
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add License", new_license_path(:school_id => current_user.school_id) %></li>
-      <%end%>
-      <!-- <%#= if can? :read, :licenses %>  
-            <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Licenses Listing", licenses_path(:school_id => current_user.school_id) %></li>
-      <%#=end%> -->
+            <!-- <%#= if can? :read, :schools %> 
+              <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Information", school_path(current_user.school) %> </li>
+            <%#end%>
+            <%# if (can? :read, :users) && (can? :read_sa, :users) %>  
+              <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Admin List", users_path(:role_id => Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
+            <%#end%>
+            <%# if (can? :read, :users) && (can? :read_teacher, :users) %>  
+              <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher List", users_path(:role_id => Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
+            <%#end%>
+            <%# if (can? :read, :users) && (can? :read_student, :users) %>  
+              <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student List", users_path(:role_id => Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
+            <%#end%>
+            <%# if can? :read, :classrooms %>  
+              <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Class List", classrooms_path(:school_id => current_user.school_id) %></li>
+            <%#end%> -->
+
+            <% if (can? :create, :accessrights) && (can? :update, :accessrights) && (can? :read, :accessrights) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Assign Access Right", new_accessright_path %></li>
+        	  
+        	    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
+            <%end%>		  
+        	  <% if can? :create, :books %>
+        	    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
+        	  <%end%>
+        	  <% if can? :read, :books %>
+        	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Book List", books_path %></li>
+        	  <%end%>  		  
+            <% if (can? :create, :users) && (can? :create_sa, :users) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School Admin", new_user_path(:role_id =>Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if (can? :read, :users) && (can? :read_sa, :users) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Admin Listing", users_path(:role_id => Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if (can? :create, :users) && (can? :create_teacher, :users) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Teacher", new_user_path(:role_id =>Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if (can? :read, :users) && (can? :read_teacher, :users) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher Listing", users_path(:role_id => Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if (((can? :destroy, :users) && (can? :destroy_student, :users)) || ((can? :destroy, :users) && (can? :manage_student, :users))) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Student", new_user_path(:role_id =>Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student Listing", users_path(:role_id => Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
+            <%end%>
+            <% if can? :create, :classrooms %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Classroom", new_classroom_path(:school_id => current_user.school_id) %></li>
+            <%end%>
+            <% if can? :read, :classrooms %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom Listing", classrooms_path(:school_id => current_user.school_id) %></li>
+            <%end%>
+            <% if can? :create, :licenses%>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add License", new_license_path(:school_id =>current_user.school_id) %></li>
+            <%end%> 
           </ul>
     </li>
     <%end%>
