reset pass screen for app css

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -201,3 +201,6 @@ hr.school-heading-hr{margin-top: 21px;}
 .div-color-blue{background-color:#7093D8 !important;}
 .div-color-white{background-color:white !important;}
 
+.reset-password-app-error-msg .error{margin: 6px 190px !important;}
+.stud-name-reset-pass{margin: 0 193px;}
+
