--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -49,17 +49,17 @@
         </div>
     </div>
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
-	    <%unless @user.blank?%><label>Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><br/><%end%>
+	    <%unless @user.blank?%><label class="stud-name-reset-pass">Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><br/><%end%>
 		<%= hidden_field_tag(:email_id, @a["email"])%>
 		<%= hidden_field_tag(:username, @a["username"])%>
 		<%= hidden_field_tag(:school_id, @a["school_id"])%>
 		<%= hidden_field_tag(:app_type, @a["a_type"])%>
 		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <div>
-        	<div>
+        	<div class="reset-password-app-error-msg">
 				<%= password_field_tag 'password', nil, :class=>"", :required=>true, :placeholder => "Password" %><br/>
             </div>
-            <div>
+            <div class="reset-password-app-error-msg">
 				<%= password_field_tag 'password_confirmation',nil, :class=>"", :required=>true, :placeholder => "Password Confirmation" %>
             </div>
             <div>
