changes in mail added reset link

--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -31,11 +31,8 @@
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
-               If you believe this was done in error, please immediately contact your school administrator.
+              If you believe this was done in error, please immediately contact your school administrator and reset your password by clicking on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
             </p>
-            <p style="margin:0 0; font-size:13px">
-             To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
-            </p>  
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
