--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
-	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", :id=>"save_user", data: { disable_with: 'Saving...' } %>
 					<% if @role_id.name.eql?('Web Admin')%>
 						<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
 					<% elsif @role_id.name.eql?('School Admin')%>
