--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -1,11 +1,14 @@
 <div class="logopanel reset-text">
     <h1> Books That Grow</h1>
-	<%= image_tag("app_icon.png", :class=>"logo_image")%>
+	<%= image_tag("app_icon.png", :class=>"logo_image reset-img")%>
 	<h3>You password has been reset.</h3>
-	<% if params[:app_type].blank? %>
-		<h4>Click <a href = '<%= params[:path] %>'>here</a> to log in to the administrative portal.</h4>
-	<%else%>
-		<h4>Click <a href = '<%= params[:path] %>'>here</a> to log in to Books That Grow.</h4>
+	<% if (params[:app_type].blank?) && (params[:role].eql?('2') || params[:role].eql?('3')) %>
+		<h4 class="reset-font">Click <a href = '<%= params[:path] %>'>here</a> to log in to the administrative portal.</h4>
+		<h4 class="reset-font">Click <a href = '<%= params[:app_path] %>'>here</a> to log in to Books That Grow.</h4>
+	<%elsif (params[:app_type].blank?) && (params[:role].eql?('1') ||  params[:role].eql?('4')) %>
+		<h4 class="reset-font">Click <a href = '<%= params[:path] %>'>here</a> to log in to the administrative portal.</h4>
+	<%else %>	
+		<h4 class="reset-font">Click <a href = '<%= params[:path] %>'>here</a> to log in to Books That Grow.</h4>
 	<%end%>	
 </div>
 
