added password policy on reset pass page

--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -15,6 +15,10 @@
                 </ul>
          <div class="mb20"></div>
    </div>
+   <!-- <div class="text-grey">
+        <span class="asterisk">*</span>  Password Policy:
+            <p>Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
+    </div> -->
 </div>
 <div class="col-md-5">
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
@@ -27,11 +31,11 @@
         <p class="mt5 mb20">Enter a new password and click submit.</p>
         <div class="form-group">
 		    <%= label_tag 'password_label', "New Password", :class => "form-label"%>
-		    <%= password_field_tag 'password', nil, class: "form-control pword", :required=>true %>
+		    <%= password_field_tag 'password', nil, class: "form-control pword class_password", :required=>true %>
 		</div>
         <div class="form-group">
 		    <%= label_tag 'password_confirmation_label', "Confirm Password", :class => "form-label" %>
-		    <%= password_field_tag 'password_confirmation',nil, class: "form-control pword", :required=>true %>
+		    <%= password_field_tag 'password_confirmation',nil, class: "form-control pword class_confirm_password", :required=>true %>
 		</div>
         <%= submit_tag "Submit", class: "btn btn-success btn-cons", data: { disable_with: 'Resetting...' }%>
 		
