--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -208,3 +208,4 @@ hr.school-heading-hr{margin-top: 21px;}
 .reset-font{font-family: sans-serif !important;}
 .btn.btn-primary:focus{outline: none;}
 
+.text-grey{color: grey}
