--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -65,7 +65,7 @@
 	                    </div>
 	                    <div class="col-sm-6">
 	                    	<span class="asterisk">*</span>  Password Policy:
-	                    	<p>Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
+	                    	<p class="pass_policy">Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
 	        			</div>
 	                </div>
 				<%else%>
@@ -86,7 +86,7 @@
 	                    	</div>
 	                    	<div class="col-sm-6">
 	                    		<span class="asterisk">*</span>  Password Policy:
-	                    		<p>Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
+	                    		<p class="pass_policy">Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
 	        				</div>
 	                	</div>
 					<%end%>
