--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -15,7 +15,7 @@
                 </ul>
          <div class="mb20"></div>
    </div>
-   <!-- <div class="text-grey">
+   <!-- <div class="pass_policy">
         <span class="asterisk">*</span>  Password Policy:
             <p>Password should contain at least 5 characters, at least 1 number, at least 1 lowercase character (a-z), at least 1 uppercase character (A-Z), no special characters allowed.<p>
     </div> -->
