added password policy on app/reset pass

--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -60,10 +60,10 @@
 		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <div>
         	<div class="reset-password-app-error-msg">
-				<%= password_field_tag 'password', nil, :class=>"", :required=>true, :placeholder => "Password" %><br/>
+				<%= password_field_tag 'password', nil, :class=>"class_password", :required=>true, :placeholder => "Password" %><br/>
             </div>
             <div class="reset-password-app-error-msg">
-				<%= password_field_tag 'password_confirmation',nil, :class=>"", :required=>true, :placeholder => "Password Confirmation" %>
+				<%= password_field_tag 'password_confirmation',nil, :class=>"class_confirm_password", :required=>true, :placeholder => "Password Confirmation" %>
             </div>
             <div>
             	<%= submit_tag "Submit", class: "reset-password", data: { disable_with: 'Resetting...' }%>
