added password policy on app/reset pass

--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -12,7 +12,7 @@
           <td width="30" id="header" style="padding:10px;">
             <a href="javscript:void(0);" >
 				      <%#= image_tag(@user_info[:login_url] + "/assets/app_icon_60.png")%>
-              <%= image_tag("http://54.225.184.100//assets/app_icon_60.png") %>
+              <%= image_tag("http://54.225.184.100/assets/app_icon_60.png") %>
               
 			      </a>
           </td>
