changed mail addr

--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -11,9 +11,7 @@
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:10px;">
             <a href="javscript:void(0);" >
-				      <%#= image_tag(@user_info[:login_url] + "/assets/app_icon_60.png")%>
-              <%= image_tag("http://54.225.184.100/assets/app_icon_60.png") %>
-              
+				      <%= image_tag(@user_info[:login_url] + "/assets/app_icon_60.png")%>
 			      </a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
