--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -229,17 +229,17 @@ $(document).ready(function(){
 $('#changePassword').click(function() {
 	$(".form_validation").validate({
 		rules: {
-			"user[password]":{ minlength: 5, required: true} ,
-			"user[password_confirmation]":{ minlength: 5, required: true, equalTo: "#user_password"} 
+			"user[password]":{ minlength: 1, required: true} ,
+			"user[password_confirmation]":{ minlength: 1, required: true, equalTo: "#user_password"} 
 		},
 		messages: {
 			"user[password]":{
 				required: "Please provide a password",
-				minlength: "Your password must be at least 5 characters long."
+				minlength: "Your password must be at least 1 character long."
 			},
 			"user[password_confirmation]": {
 				required: "Please provide a password",
-				minlength: "Your password must be at least 5 characters long.",
+				minlength: "Your password must be at least 1 character long.",
 				equalTo: "Please enter the same password as above."
 			}
 		}
