--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -69,7 +69,7 @@
 	        			</div>
 	                </div>
 				<%else%>
-					<%if f.object.role_id == 4%>
+					<%#=if f.object.role_id == 4%>
 						<p>(Leave blank if you don't want to change password)</p>
 	               		<div class="row">
 	                    	<div class="col-sm-3">
@@ -89,7 +89,7 @@
 	                    		<p class="pass_policy">Password should contain at least 1 character.<p>
 	        				</div>
 	                	</div>
-					<%end%>
+					<%#=end%>
 			    <%end%>
 			    <% unless @role_id.name.eql?('Web Admin') %>
 			    	<% if (('new').eql?action_name) || (('create').eql?action_name)%>
