--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -23,14 +23,16 @@
               Hello <%= @user_info[:name] %>,
             </p>
             <p style="margin:15px 0; font-size:13px">
-              <p style="margin:0 0; font-size:13px">
-                Username: <%= @user_info[:username] %>
+              Your Books That Grow password has been reset.  
+             <!--  <p style="margin:0 0; font-size:13px">
+                Your Books That Grow password has been reset.  
+                 Username: <%#= @user_info[:username] %>
               </p>
               <p style="margin:0 0; font-size:13px">
-                Email Address: <%= @user_info[:email] %>
-              </p>
+                Email Address: <%#= @user_info[:email] %>
+              </p> -->
             </p>
-            <p style="margin:0 0; font-size:13px">
+            <p style="margin:15px 0; font-size:13px">
               If you believe this was done in error, please immediately contact your school administrator and reset your password by clicking on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
             </p>
             <p style="margin:15px 0 0; font-size:13px">
