changes reverted back for reset pass

--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -1,4 +1,3 @@
-<%if @user_info[:password_changed].blank?%>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -20,7 +19,7 @@
         </tr>
         <tr class="episode">
 
-          
+          <%if @user_info[:password_changed].blank?%>
             <td valign="top" colspan="2" style="padding:20px">
              <!--  <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow account has been updated.</h2> -->
               <p style="margin:15px 0; font-size:13px">
@@ -53,16 +52,16 @@
                 The Books That Grow Team
               </p>
             </td>
-          <%#=else%>
-            <!-- <td valign="top" colspan="2" style="padding:20px">
+          <%else%>
+            <td valign="top" colspan="2" style="padding:20px">
               <p style="margin:15px 0; font-size:13px">
-                Hello <%#= @user_info[:name] %>, 
+                Hello <%= @user_info[:name] %>, 
               </p>
               <p style="margin:0 0; font-size:13px">
                 Your Books That Grow password has been reset. 
               </p>
               <p style="margin:15px 0; font-size:13px">
-                If you believe this was done in error, please immediately contact your school administrator and reset your password by clicking on the following link: <a href = '<%#= @user_info[:reset_pass_url] %>'>reset password</a>
+                If you believe this was done in error, please immediately contact your school administrator and reset your password by clicking on the following link: <a href = '<%= @user_info[:reset_pass_url] %>'>reset password</a>
               </p>
               <p style="margin:15px 0 0; font-size:13px">
                 Thanks,
@@ -70,8 +69,8 @@
               <p style="margin:15px 0; font-size:13px">
                 The Books That Grow Team
               </p>
-            </td> -->
-          
+            </td>
+          <%end%>  
 
         </tr>
         <tr>
@@ -87,4 +86,3 @@
   </table>
 </body>
 </html>
-<%end%>  
